# software

./: .gitignore  hawaii_software_arch.drawio
Honolulu_Firmware/: README.md  platformio.ini
Honolulu_Firmware/src/: Blink.cpp  Honolulu.cpp
Honolulu_Firmware/src/Main/: main_sketch.ino
Kronks Encoder Jig/: datCapture.py  data.csv  dataAnalyzer.py  dataParser.py  data_noise.csv  data_noise_external.csv  encoder_data.csv
Kronks Encoder Jig/encoderTest/: encoderTest.ino
Teensy Firmware/: readencodershift.ino
Teensy Firmware/readencodershift/: readencodershift.ino
hawaii_ros_ws/: README.md  hawaii_teleop.sh  hawaii_teleop_arch.drawio  requirements.txt
hawaii_ros_ws/src/hawaii_control/: package.xml  setup.cfg  setup.py
hawaii_ros_ws/src/hawaii_control/config/: Student_Arm.yaml  hawaii.yaml  modes.yaml  single_dynmxl.yaml
hawaii_ros_ws/src/hawaii_control/launch/: hawaii_control.launch.py
hawaii_ros_ws/src/hawaii_descriptions/: package.xml  requirements.txt  setup.cfg  setup.py
hawaii_ros_ws/src/hawaii_descriptions/launch/: hawaii_descriptions.launch.py
hawaii_ros_ws/src/hawaii_gazebo/: package.xml  setup.cfg  setup.py
hawaii_ros_ws/src/hawaii_gazebo/config/trajectory_controllers/: hawaii_trajectory_controllers.yaml
hawaii_ros_ws/src/hawaii_gazebo/hawaii_gazebo/: hawaii_gazebo.py
hawaii_ros_ws/src/hawaii_gazebo/launch/: hawaii_gazebo.launch.py
hawaii_ros_ws/src/hawaii_gazebo/worlds/: hawaii_gazebo.world
hawaii_ros_ws/src/hawaii_teleop/: package.xml  setup.cfg  setup.py
hawaii_ros_ws/src/interbotix_xs_driver/: CMakeLists.txt
(+65 files in other folders)
