<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hawaii_gazebo</name>
  <version>0.0.0</version>
  <description>hawaii gazebo simulations package</description>
  <maintainer email="ramseyer.jessie@gmail.com">jramseyer</maintainer>
  <license>Apache License 2.0</license>
  
  <depend>hawaii_descriptions</depend>
  <depend>controller_manager</depend>
  <depend>effort_controllers</depend>
  <depend>joint_state_broadcaster</depend>
  <?<depend>interbotix_xs_ros_control</depend>?>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>joint_trajectory_controller</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
